[package]
name = "nih_plug_egui"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use egui GUIs with NIH-plug"

[features]
default = ["opengl", "default_fonts"]
# `nih_plug_egui` always uses OpenGL since egui's wgpu backend is still unstable
# depending on the platform
opengl = ["egui-baseview/opengl"]
default_fonts = ["egui-baseview/default_fonts"]
rayon = ["egui-baseview/rayon"]

[dependencies]
nih_plug = { path = "..", default-features = false }
raw-window-handle = "0.5"
baseview = { git = "https://github.com/TristanCacqueray/baseview.git", rev = "999ef6e4a64515b5e981f932515d4cf02bd85e74" }
crossbeam = "0.8"
egui-baseview = { git = "https://codeberg.org/TristanCacqueray/egui-baseview.git", rev = "1781fbf23cd915cf2f373485b5181801ac917ca4" }
parking_lot = "0.12"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
